# cosmos-coherence

./: .coverage  .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HALUEVAL_REPRODUCIBILITY.md  Makefile  README.md  SELFCHECKGPT_RESULTS.md  SIMPLEQA_IMPLEMENTATION_SUMMARY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example_config.yaml  fix_long_lines.py  pyproject.toml
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/recaps/: 2025-09-05-dockerization-setup.md  2025-09-06-pydantic-benchmark-abstractions.md  2025-09-07-openai-client-integration.md  (+2 more)
configs/: base.yaml  faithbench_config.yaml  logging.yaml  monitoring.yaml
docs/: benchmark-assessment-2025-09-29.md  docker-guide.md  huggingface_integration.md  models-2025.md  volume-management.md
results/: mock_benchmark_20250907_150656.json  mock_benchmark_20250907_150732.json  mock_benchmark_20250907_151354.json  mock_benchmark_20250907_154840.json  mock_benchmark_20250907_155712.json  mock_benchmark_20250907_155717.json  mock_benchmark_20250907_160709.json  mock_benchmark_20250907_161454.json  mock_benchmark_20250907_213135.json  mock_benchmark_20250907_214134.json
scripts/: backup.sh  deploy.sh  health-check.sh  restore.sh  start-dev.sh  start-prod.sh
tests/: __init__.py  test_docker_compose.py  test_docker_integration.py  test_dockerfile.py  test_documentation.py  test_env_files.py  test_environment_config.py  test_gitignore.py  test_precommit.py  test_volume_persistence.py
(+165 files in other folders)
